--- a/.gitignore
+++ b/.gitignore
@@ -98,4 +98,5 @@ modules.xml
 # End of https://www.toptal.com/developers/gitignore/api/webstorm+all
 2015/hidden
 2021/hidden
+2022/hidden
 node_modules
